# KMS

./: Dockerfile  README.md  clientApp  clientApp.cpp  compose.yml  etsi_client  etsi_client.cpp  etsi_server  serverApp  serverApp.cpp
AG/: APPCLIENT.cpp  APPCLIENTRX.cpp  APPCLIENTTX.cpp  APPSERVER.cpp  APPSERVERRX.cpp  APPSERVERTX.cpp  APPSERVERt.cpp  IPTUNNELCLIENT.cpp  IPTUNNELSERVER.cpp  README.md  appRX  appTX  appclientrx  appclienttx  appservertx  console.cpp  etsi_qkd_004.hpp  load_etsi_004_20200819.cpp  load_etsi_004_20200819.h  load_request.h  main  main_app.cpp  message_handler.cpp  t1  t2
APP/: ETSI004_block.cpp  ETSI004_block.h  KMS.cpp  README.md  app_client.cpp  app_server.cpp  cv_qokd_ldpc_multi_machine_sdf.h  etsi_qkd_004.cpp  etsi_qkd_004.h  input_APPA.txt  input_parameters_KMS.txt  input_parameters_KeyProvider.txt  keyProviderServer.cpp  key_provider  kms  load_ascii_20200819.cpp  load_ascii_2024.cpp  load_ascii_2024.h  receive_ETSI004.cpp  receive_ETSI004.h  receive_request.cpp  receive_request.h  recon_emul.cpp  save_ascii_2024.cpp  save_ascii_2024.h
APPSERVER/: README.md  main  main_app.cpp  makefile
ETSI004/: CMakeLists.txt  README.md  a.out  etsi_client  etsi_client.cpp  etsi_qkd_004.cpp  etsi_qkd_004.h  etsi_qkd_004.hpp  etsi_server  etsi_server.cpp
KMS/: KMS.cpp  KMS.h  Makefile_kms  README.md  input_APPA.txt  input_KMS.txt  input_keyProviderA.txt  input_keyProviderB.txt  input_north.txt  input_northA.txt  input_northB.txt  input_parameters_KMS.txt  input_parameters_KeyProvider.txt  input_south.txt  input_southA.txt  input_southB.txt  (+3 more)
(+52 files in other folders)
